# aoc2021_day_9

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  heightmap.cpp  heightmap.h  main.cpp
test/: CMakeLists.txt  heightmap_test.cpp
